# ampiimts

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
documentation/: README.md  ampiimts_example.ipynb  documentation.md
notebooks/Matrix_Profile/: Matrix_profile-multidimensionnal.ipynb  Matrix_profile.ipynb  Matrix_profile_old_version.ipynb  X.csv
notebooks/preprocessing/: interpolation+normalization.ipynb  sample_interpolation.ipynb  sample_normalization.ipynb
src/ampiimts/: __init__.py  ampiimts.py  matrix_profile.py  motif_pattern.py  motif_pipeline.py  plotting.py  pre_processed.py
tests/: run_tests_memray.py  test_end_to_end.py  test_fonctionnels.py  test_njit_functions.py  test_preprocessing.py
tests/data/air_bejin/: PRSA_Data_Aotizhongxin_20130301-20170228.csv  PRSA_Data_Changping_20130301-20170228.csv  PRSA_Data_Dingling_20130301-20170228.csv  PRSA_Data_Dongsi_20130301-20170228.csv  PRSA_Data_Guanyuan_20130301-20170228.csv  PRSA_Data_Gucheng_20130301-20170228.csv  PRSA_Data_Huairou_20130301-20170228.csv  PRSA_Data_Nongzhanguan_20130301-20170228.csv  PRSA_Data_Shunyi_20130301-20170228.csv  PRSA_Data_Tiantan_20130301-20170228.csv  PRSA_Data_Wanliu_20130301-20170228.csv  PRSA_Data_Wanshouxigong_20130301-20170228.csv
