[project]
name = "ampiimts"
version = "0.1.0"
description = "Adaptive indexing using Matrix Profile on irregular, multivariate time series."
authors = [
    { name = "Guillaume Renouard", email = "guillaumernrd76@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENCE" }

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "joblib>=1.3.0",
    "numba>=0.57.0",
    "tslearn>=0.6.3",
    "stumpy>=1.11.1",
    "faiss-cpu>=1.7.4",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=6.1.1",
    "codecov"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
