[project]
name = "ampiimts"
version = "0.1.0"
description = "Adaptive indexing using Matrix Profile on irregular, multivariate time series."
authors = [
    { name = "Guillaume Renouard", email = "guillaumernrd76@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
    "joblib>=1.5.1",
    "numba>=0.61.2",
    "tslearn>=0.6.4",
    "stumpy>=1.13.0",
    "faiss-cpu>=1.11.0.post1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "codecov>=2.1.13",
    "pytest-memray>=1.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"